<resources>
    <string name="app_name">Coffee Brewer</string>


    <!--EXCEPTIONS & ERRORS-->
    <string name="exception_not_logged">Your credentials have expired, please sign in again from the profile view.</string>
    <string name="exception_no_connectivity">No internet connection, please try again later.</string>
    <string name="exception_undefined">Service unavailable. Please try again later.</string>
    <string name="error_update_notification_settings">please check your settings and try again.</string>
    <string name="error_google_connection">Google Service unavailable. Please try again later.</string>
    <string name="bar_closed">The coffee bar is actually close.\n\nWe will inform you as soon as it opens.</string>

    <!--Home screen-->
    <string name="home_person_queue">in the queue</string>
    <string name="no_order_welcome">Welcome to the coffee bar!</string>
    <string name="no_order_message">Order now and we will inform you when it’s ready</string>
    <string name="coffee_ready">Your order is ready!</string>
    <string name="coffee_ready_token">Use this token to get your coffee.</string>
    <string name="action_got_it">Got it!</string>
    <string name="product_customize_title">Customize</string>
    <string name="action_add_order">Add to order</string>
    <string name="customize_size">Cup Size</string>
    <string name="cup_size_small">Small</string>
    <string name="cup_size_medium">Medium</string>
    <string name="cup_size_large">Large</string>
    <string name="select_cup_size">Please select a cup size in order to continue</string>
    <string name="costumize_topping">Toppings</string>
    <string name="topping_vanilla">Vanilla Flavor</string>
    <string name="topping_cinnamon">Cinnamon</string>
    <string name="topping_toffeenut">Toffeenut Flavor</string>
    <string name="topping_hazelnut">Hazelnut</string>
    <string name="costumize_others">Others</string>
    <string name="take_away">Take Away</string>
    <string name="login_desc">Please, signin using your Property Finder account</string>
    <string name="login_error">Error, please use your Property Finder account. If problem persist contact us</string>
    <string name="customize_note_title">Note</string>
    <string name="title_bar">Home</string>
    <string name="title_History_long">Check your coffee history</string>
    <string name="title_History">History</string>
    <string name="title_order">Order</string>
    <string name="title_order_long">Select your beverage</string>
    <string name="sugar_title">Sugar</string>
    <string name="size_title">Size</string>
    <string name="additions_title">Additions</string>
    <string name="topping_carmel">Carmel Flavor</string>
    <string name="take_away_title">Take away</string>
    <string name="order_note_title">Add note</string>
    <string name="action_brew">Brew it</string>
    <string name="order_sent">Your order has been sent successfully</string>
    <string name="action_ok">OK</string>
    <string name="status_pending">pending</string>
    <string name="status_progress">in progress</string>
    <string name="status_ready">ready</string>
    <string name="status_done">done</string>
    <string name="status_canceled">canceled</string>
    <string name="order_status">Your order is %s</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Normal</string>
    <string name="size_large">Large</string>
    <string name="sugar_stick">sugar stick</string>
    <string name="ingredients">ingredients</string>
    <string name="bar_close_message">Coffee bar is closed, please visit us again from 8:30-5:30 Sunday - Thursday</string>
    <string name="clean_order">Do you want to remove all items from your order?</string>
    <string name="bar_close_desc">Are you ready for hard work today, Alvin? =)</string>
    <string name="bar_open_desc">Be strong, Alvin! We believe in you!</string>
    <string name="bar_close_button">Open Coffee Bar</string>
    <string name="bar_open_button">Close Coffee Bar</string>
    <string name="title_orders_long">It\'s a very busy day, Alvin!</string>
    <string name="customer_order_status">Change order status</string>
    <plurals name="person">
        <item quantity="zero">Nobody</item>
        <item quantity="one">%d person</item>
        <item quantity="other">%d persons</item>
    </plurals>

</resources>
