<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.constraint.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10" />

    <RelativeLayout
        android:id="@+id/closed_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty"
        android:layout_marginLeft="@dimen/home_margin_vertical"
        android:layout_marginRight="@dimen/home_margin_vertical"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_guideline">

        <ImageView
            android:id="@+id/closed_image"
            android:layout_width="@dimen/home_image_width"
            android:layout_height="@dimen/home_image_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/closed" />

        <TextView
            android:id="@+id/closed_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/closed_image"
            android:fontFamily="@font/caviar_dreams"
            android:gravity="center_vertical"
            android:text="@string/bar_closed"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/home_font_desc" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/opened_layout_no_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty"
        android:layout_marginLeft="@dimen/home_margin_vertical"
        android:layout_marginRight="@dimen/home_margin_vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline">

        <ImageView
            android:id="@+id/open_image"
            android:layout_width="@dimen/home_image_width"
            android:layout_height="@dimen/home_image_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/open" />

        <TextView
            android:id="@+id/home_open_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/open_image"
            android:layout_marginTop="@dimen/home_no_order_vertical_margin"
            android:fontFamily="@font/caviar_dreams"
            android:text="@string/no_order_welcome"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/home_font_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_open_welcome"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caviar_dreams_bold"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/home_font_desc"
                tools:text="3 persons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_person_space"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/home_person_queue"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/home_font_desc" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/home_no_order_vertical_margin"
            android:fontFamily="@font/caviar_dreams"
            android:text="@string/no_order_message"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/home_font_desc" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/opened_layout_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty"
        android:layout_marginLeft="@dimen/home_margin_vertical"
        android:layout_marginRight="@dimen/home_margin_vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline">

        <ImageView
            android:id="@+id/coffee_image"
            android:layout_width="@dimen/home_image_width"
            android:layout_height="@dimen/home_image_height"
            android:layout_centerHorizontal="true"
            android:src="@drawable/coffee_cup" />

        <com.badoualy.stepperindicator.StepperIndicator
            android:id="@+id/order_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coffee_image"
            android:layout_marginTop="@dimen/home_steps_top_margin"
            app:stpi_circleColor="@color/colorPrimary"
            app:stpi_lineColor="@color/colorPrimary"
            app:stpi_stepCount="3" />

        <LinearLayout
            android:id="@+id/progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_steps"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/home_progress_top_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/coffee_current_status"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/home_font_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_person_space"
                android:fontFamily="@font/caviar_dreams_bold"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/home_font_desc"
                tools:text="pending" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/opened_layout_order_ready"
        android:layout_width="match_parent"
        android:layout_height="@dimen/empty"
        android:layout_marginLeft="@dimen/home_margin_vertical"
        android:layout_marginRight="@dimen/home_margin_vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/coffee_image_ready"
                android:layout_width="@dimen/home_image_width"
                android:layout_height="@dimen/home_image_height"
                android:layout_centerHorizontal="true"
                android:src="@drawable/coffee_cup" />

            <TextView
                android:id="@+id/coffee_ready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coffee_image_ready"
                android:layout_marginTop="@dimen/home_steps_top_margin"
                android:fontFamily="@font/caviar_dreams_bold"
                android:text="@string/coffee_ready"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/home_font_desc" />

            <ImageView
                android:id="@+id/token_image"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_below="@+id/coffee_ready"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/home_steps_top_margin"
                android:src="@drawable/token_5" />

            <TextView
                android:id="@+id/coffee_reminder_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/token_image"
                android:layout_marginTop="@dimen/home_steps_top_margin"
                android:fontFamily="@font/caviar_dreams"
                android:text="@string/coffee_ready_token"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/home_font_desc" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_register"
        style="@style/AppTheme.MainButton"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/style_medium_padding"
        android:layout_marginLeft="@dimen/general_margin_vertical"
        android:layout_marginRight="@dimen/general_margin_vertical"
        android:background="@color/colorPrimaryDark"
        android:text="@string/action_got_it"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>